--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8081
-logging.level.org.springframework = DEBUG
+#logging.level.org.springframework = DEBUG
+managment.security.enabled=false
